[package]
name = "differential-regression"
version = "0.1.0"
edition = "2021"
description = "Regression testing for specification patches — simulation-driven synthesis gatekeeper"
license = "MIT"
keywords = ["regression", "simulation", "testing", "gatekeeper"]
categories = ["development-tools", "development-tools::testing"]
repository = "https://github.com/SuperInstance/differential-regression"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
